--- a/formatCuTest.htm
+++ b/formatCuTest.htm
@@ -453,9 +453,9 @@
 									    <td><div class="list-div-td-130">ベンダー </div></td>
 									    <td><div class="list-div-td-130">ベンダー       </div></td>
 
-									    <td><div class="list-div-td-110" kubun="money" align="right" style="color: black;">¥1,720,000</div></td>
-									    <td><div class="list-div-td-110" kubun="money" align="right" style="color: black;">¥86,000</div></td>
-									    <td><div class="list-div-td-110" kubun="money" align="right" style="color: black;">¥1,806,000</div></td>
+									    <td><div class="list-div-td-110" kubun="money" align="right" style="color: black;">1720000</div></td>
+									    <td><div class="list-div-td-110" kubun="money" align="right" style="color: black;">86000</div></td>
+									    <td><div class="list-div-td-110" kubun="money" align="right" style="color: black;">1806000</div></td>
 
 									    <td><div class="list-div-td-110"></div></td>
 									</tr>
