--- a/formatCuTest.htm
+++ b/formatCuTest.htm
@@ -529,8 +529,8 @@
 <script type="text/javascript" src="./formatCuTest_files/inline.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/jquery.calculation.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/FusionCharts.js"></script>
-<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
-<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency.ja-JP.js"></script>
+<!--script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
+<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency.ja-JP.js"></script-->
 <script type="text/javascript" src="./formatCuTest_files/jquery-barcode-2.0.2.min.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/highcharts.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/jquery.validate.min.js"></script>
