--- a/formatCuTest.htm
+++ b/formatCuTest.htm
@@ -174,7 +174,7 @@
 		$("#vendorName").css("background", "rgb(234,234,234)");
 		$("#PayeeNm").attr("readonly","readonly");
 		$("#PayeeNm").css("background", "rgb(234,234,234)");
-		//$("[kubun='money']").formatCurrency({ colorize: true, negativeFormat: '-%s%n', roundToDecimalPlace: 0,region: 'ja-JP' });
+		$("[kubun='money']").formatCurrency({ colorize: true, negativeFormat: '-%s%n', roundToDecimalPlace: 0,region: 'ja-JP' });
 		//$("[kubun='money']").formatCurrency();
 	});
 	function doEdit(){
