--- a/ff.htm
+++ b/ff.htm
@@ -468,7 +468,7 @@
 		<div class="split right">Powered by 販管システム</div> 
 	</div>
 </div>
-<!--script type="text/javascript" src="./formatCuTest_files/superfish.js"></script>
+<script type="text/javascript" src="./formatCuTest_files/superfish.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/supersubs.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/hoverIntent.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/jquery.flot.js"></script>
@@ -494,7 +494,7 @@
 <script type="text/javascript" src="./formatCuTest_files/yahho-calendar.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/gcalendar-holidays.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/jquery.calculator.js"></script>
-<script type="text/javascript" src="./formatCuTest_files/jquery.ui.datepicker-ja.js"></script-->
+<script type="text/javascript" src="./formatCuTest_files/jquery.ui.datepicker-ja.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency.ja-JP.js"></script>	
 <script>
