--- a/f2.htm
+++ b/f2.htm
@@ -32,7 +32,8 @@
 	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/zebra_dialog.css">
 	<script type="text/javascript" src="./formatCuTest_files/zebra_dialog.js"></script>
 	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/jquery.calculator.css">	
-	
+<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
+<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency.ja-JP.js"></script>	
 	<!--[if lte IE 8]>
 		
 	<script type="text/javascript" src="/hanbai/hanbai/js/excanvas.min.js"></script>
@@ -510,8 +511,8 @@
 		<div class="split right">Powered by 販管システム</div> 
 	</div>
 </div>
-<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
-<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency.ja-JP.js"></script>
+<!--script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
+<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency.ja-JP.js"></script-->
 <!--script type="text/javascript" src="./formatCuTest_files/superfish.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/supersubs.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/hoverIntent.js"></script>
