--- a/f2.htm
+++ b/f2.htm
@@ -38,7 +38,7 @@
 		
 	<script type="text/javascript" src="/hanbai/hanbai/js/excanvas.min.js"></script>
 	<![endif]-->
-	<script>
+	<!--script>
 		function getBargainStr(){
 			return "【 値 引 き 】";
 		}
@@ -52,7 +52,7 @@
 		         showButtonPanel: true
 		     } );
 		 } );
-	</script>
+	</script-->
 
 <script type="text/javascript" src="./formatCuTest_files/yuiloader-dom-event.js"></script>
 <style type="text/css">.gcal-sunday   .ui-state-default { background-image: none; background-color: #f99 } .gcal-saturday .ui-state-default { background-image: none; background-color: #6cf } .ui-widget-content .gcal-holiday { background-image: none; background-color: #f9f }</style>
@@ -478,10 +478,10 @@
 <script type="text/javascript" src="./formatCuTest_files/yahho-calendar.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/gcalendar-holidays.js"></script>
 <script type="text/javascript" src="./formatCuTest_files/jquery.calculator.js"></script>
-<script type="text/javascript" src="./formatCuTest_files/jquery.ui.datepicker-ja.js"></script-->	
+<script type="text/javascript" src="./formatCuTest_files/jquery.ui.datepicker-ja.js"></script>	
 <script>
 YahhoCal.loadYUI();
-</script>
+</script-->
 
  <div class="ui-dialog ui-widget ui-widget-content ui-corner-all ui-draggable" tabindex="-1" role="dialog" aria-labelledby="ui-dialog-title-vendorSelDiv" style="display: none; z-index: 1000; outline: 0px;"><div class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix"><span class="ui-dialog-title" id="ui-dialog-title-vendorSelDiv">仕入先選択</span><a href="http://mboo/hanbai/hanbai/Purchase/purchase_shiire_list#" class="ui-dialog-titlebar-close ui-corner-all" role="button"><span class="ui-icon ui-icon-closethick">close</span></a></div><div id="vendorSelDiv" style="background-color: rgb(245, 245, 245); background-position: initial initial; background-repeat: initial initial;" class="ui-dialog-content ui-widget-content">
 
