--- a/f4.htm
+++ b/f4.htm
@@ -35,105 +35,9 @@
 
 </head>
 
-<body screen_capture_injected="true" chromeextension-color-pick.com="true">
-
-<div class="container">   
-	﻿<div class="breadcrumbs">
-</div><h2></h2>
-<script>
-	$(document).ready(function(){
-		$("#list").scroll(function(){
-			$("#title").scrollLeft($("#list").scrollLeft());
-		});
-		$("#printDiv").hide();
-		$("#vendorName").attr("readonly","readonly");
-		$("#vendorName").css("background", "rgb(234,234,234)");
-		$("#PayeeNm").attr("readonly","readonly");
-		$("#PayeeNm").css("background", "rgb(234,234,234)");
-		$("[kubun='money']").formatCurrency({ colorize: true, negativeFormat: '-%s%n', roundToDecimalPlace: 0,region: 'ja-JP' });
-		//$("[kubun='money']").formatCurrency();
-	});
-</script>
-<input type="hidden" id="left" value="">
-<div class="section" id="cadd">
-	<div class="full">
-		<div class="box">
-			<div class="content forms">
-<script type="text/javascript">
-	$(document).ready(function(){
-		var tmp = $("#chgComNendo").find("option:[selected='selected']").text();
-		var starD = "年1月1日";
-		var endD = "年12月31日";
-		$("#comNendoSelVal").text(tmp+starD+"～"+tmp+endD);
-		$("#chgComNendo").change(function(){
-			$("#comNendoSelVal").text($(this).val()+starD+"～"+$(this).val()+endD);
-		});
-	});
-</script>
-
-<script type="text/javascript">
-	
-	$(document).ready(function() {
-		$("#vendorSelDiv").dialog({
-			autoOpen: false,
-			height:435,
-			width:600,
-			modal:true,
-			resizable: false,
-			closeOnEscape: false,
-			title:"仕入先選択"
-		});
-	});
-	
-</script>
-<script type="text/javascript">
-	function showShiharaisakiSelDlg(){	
-		var rdm = Math.random() * 999 +1 ;
-		var url = "http://mboo/hanbai/hanbai/Master/vendorsel2/" + rdm;
-		$("#payeeSelDiv").load(url).dialog("open");
-	}
-	
-	$(document).ready(function() {
-		$("#payeeSelDiv").dialog({
-			autoOpen: false,
-			height:435,
-			width:600,
-			modal:true,
-			resizable: false,
-			closeOnEscape: false,
-			title:"支払先検索"
-		});
-	});
-	function checkPayeeCode(){
-	    var id = $("#PayeeCode").val();
-	    if (id == "") {
-	        $("#PayeeNm").val("");
-	        $("#hidPayeeCodeForcheck").val("");
-	    } else {
-	    	var rdm = (Math.random() * 999 +1)*123.991 ;
-		 	$.getJSON("http://mboo/hanbai/hanbai/Master/checkvendorid/" + id + "/" + rdm, 
-		 		'', 
-		 		function(json){
-		 			if(json.length ==0){
-		 			    alert("指定した項目はリストにありません。\n リストから項目を選択するか、リスト項目と同じテキストを入力してください。");
-		 				$("#PayeeNm").val("");
-	                    $("#hidPayeeCodeForcheck").val("");
-		 				$("#PayeeCode").focus().select();
-		 			} else {
-		 			    $("#PayeeNm").val(json.name);
-	                    $("#hidPayeeCodeForcheck").val(id);
-		 			} 
-				});	  
-	    }		
-	}
-</script>
-<div id="kubun1" class="list-div-td-110" kubun="money" align="right" style="color: black;">1720000</div>
-<div id="kubun2" class="list-div-td-110" kubun="money" align="right" style="color: black;">88000</div>
-<div id="kubun3" class="list-div-td-110" kubun="money" align="right" style="color: black;">1806000</div>	
-			</div>
-		</div>
-	</div>
-</div>
-</div>
+<body> 
+<div id="kubun1" class="list-div-td-110" kubun="money" >1720000</div>
+<div id="kubun2" class="list-div-td-110" kubun="money" >88000</div>
+<div id="kubun3" class="list-div-td-110" kubun="money" >1806000</div>	
 </body>
 </html>
