--- a/f9.htm
+++ b/f9.htm
@@ -5,29 +5,7 @@
 	<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
 	<meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT">
 	 
-	<title>販管</title>
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/style.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/style_text.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/form-buttons.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/link-buttons.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/menu.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/statics.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/messages.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/datatable.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/accordion.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/tabs.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/forms.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/datepicker.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/modalbox.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/jquery.fancybox-1.3.4.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/jquery.treeview.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/wysiwyg.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/wysiwyg.modal.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/wysiwyg-editor.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/zebra_dialog.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/zebra_dialog.css">
-	<link rel="stylesheet" type="text/css" href="./formatCuTest_files/jquery.calculator.css">
-
+	<title>TEST</title>
 	<script type="text/javascript" src="./formatCuTest_files/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="./formatCuTest_files/zebra_dialog.js"></script>
 	<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
