--- a/f12.htm
+++ b/f12.htm
@@ -5,7 +5,7 @@
 	<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
 	<meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT">
 	 
-	<title>TEST</title>
+	<title>TEST 12</title>
 	<script type="text/javascript" src="./formatCuTest_files/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="./formatCuTest_files/zebra_dialog.js"></script>
 	<script type="text/javascript" src="./formatCuTest_files/jquery.formatCurrency-1.4.0.js"></script>
@@ -26,8 +26,8 @@
 <span kubun="money">1806000</span>	
 <script>
 	$(document).ready(function(){
-		$("[kubun='money']").html($("[kubun='money']").val());
-		$("[kubun='money']").formatCurrency({ colorize: true, negativeFormat: '-%s%n', roundToDecimalPlace: 0,region: 'ja-JP' });
+		//$("[kubun='money']").html($("[kubun='money']").val());
+		$("[kubun='money']").formatCurrency({ useHtml:true, colorize: true, negativeFormat: '-%s%n', roundToDecimalPlace: 0,region: 'ja-JP' });
 	});
 </script>	
 </body>
