--- a/f30.htm
+++ b/f30.htm
@@ -13,7 +13,7 @@
 </head>
 
 <body> 
-<span class="money"><a href="#">1234567</a></span>	
+<span class="money">1234567</span>	
 
 <script>
 	$(document).ready(function(){
