--- a/slideout.html
+++ b/slideout.html
@@ -180,29 +180,25 @@ $(function() {
       cursor: pointer;
     }
     #slideDoorClose {
-      position: absolute;  
-      background: #4c5460 url(https://lh4.googleusercontent.com/-RGG4KpyRLcM/T8BtV75Ik9I/AAAAAAAAAEg/rsPKeO7hbjs/s800/x_alt_24x24.png) no-repeat 0 0;
-      border:none;
-      position:absolute;
-      top:10px;
-      right:10px;
-      width:25px;
-      height:25px;
-      text-indent:-999em;
-      overflow:hidden;
-      cursor:pointer;
-      padding:0;  
+      position: absolute;
+      border: none;
+      top: 10px;
+      right: 10px;
+      overflow: hidden;
+      cursor: pointer;
+      padding: 0;
+      font-size: 40px;
+      background-color: red;
     }
     #slideDoorContent {
-
-
+      margin-top: 50px;
     }
   </style>
   <div id="mobile-content">
   <div id="slideDoor">
     <div id="slideDoorOpen"></div>
     <h2>お知らせ</h2>
-    <div id="slideDoorClose"></div>
+    <div id="slideDoorClose">[X]</div>
     <div id="slideDoorContent">
         <ul>
         <li>
