--- a/slideout.html
+++ b/slideout.html
@@ -178,6 +178,10 @@ $(function() {
       right: -12%;
       background-color: #999;
       cursor: pointer;
+      text-align: center;
+      line-height: 150PX;
+      font-size: 60px;
+      color: white;
     }
     #slideDoorClose {
       position: absolute;
@@ -196,7 +200,7 @@ $(function() {
   </style>
   <div id="mobile-content">
   <div id="slideDoor">
-    <div id="slideDoorOpen"></div>
+    <div id="slideDoorOpen">>></div>
     <h2>お知らせ</h2>
     <div id="slideDoorClose">[X]</div>
     <div id="slideDoorContent">
